service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami-demo
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
